--- a/README.wiki
+++ b/README.wiki
@@ -30,3 +30,8 @@ search on them.
 
 == TODO ==
 - [ ] ffprobe: support num of frames
+- [ ] support http file server
+- [ ] support basic filename search
+- [ ] support tag search
+- [ ] support 
+
